--- a/index.html
+++ b/index.html
@@ -35,12 +35,29 @@
                     <li id="step-1"><h4>Planifier</h4><p>Confiez-nous vos rêves d'évasion : en famille ou entre amis, nous trouverons la formule qui comblera vos attentes.</p></li>
                     <li id="step-2"><h4>Organiser</h4><p>Bénéficiez de l'expertise de nos spécialistes de chaque destination, ils vous accompagnent dans la réalisation de votre voyage.</p></li>
                     <li id="step-3"><h4>Voyager</h4><p>Nous nous chargeons d'assurer votre sécurité et de veiller à votre pleine sérénité tout au long de votre voyage.</p></li>
+                    <div class="clear"></div>
                 </ul>
             </div>
         </section>
 
         <section id="possibilities">
-            <div class="wrapper"></div>
+            <div class="wrapper">
+                <article style="background-image: url(images/article-image-1.jpg);">
+                    <div class="overlay">
+                        <h4>Partez en famille</h4><p><small>Offrez le meilleur à ceux que vous aimez et partagez des moments fabuleux !</small></p>
+                        <a href="#" class="button-2">Plus d'infos</a>
+                    </div>
+                </article>
+
+                <article style="background-image: url(images/article-image-2.jpg);">
+                    <div class="overlay">
+                        <h4>Envie de s'evader</h4><p><small>Parfois un peu d'évasion serait le bienvenue et ferait le plus grand bien !</small></p>
+                        <a href="#" class="button-2">Plus d'infos</a>
+                    </div>
+                </article>
+
+                <div class="clear"></div>
+            </div>
         </section>
 
         <section id="contact">
