--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
         </section>
 
         <footer>
+            <div class="wrapper">
+                <h1>Travel Agency<span class="orange">.</span></h1>
+                <div class="copyright">Copyright © 2023. Tous droits réservés.</div>
+            </div>
         </footer>
     </body>
 
