--- a/index.html
+++ b/index.html
@@ -1,84 +1,136 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Portfolio Alexandre Pinot</title>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Crete+Round'>
-    </head>
 
-    <body>
-        <header>
-            <div class="wrapper">
-                <h1>Alexandre Pinot<span class="orange">.</span></h1>
-                <nav>
-                    <ul>
-                        <li><a href="#main-image">ACCUEIL</a></li>
-                        <li><a href="#steps">DESTINATIONS</a></li>
-                        <li><a href="#possibilities">CIRCUITS</a></li>
-                        <li><a href="#contact">CONTACT</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
+<head>
+    <meta charset="utf-8">
+    <meta name="color-scheme" content="light">
+    <title>Portfolio Alexandre Pinot</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Crete+Round'>
+</head>
 
-        <section id="main-image">
-            <div class="wrapper">
-                <h2>Organisez votre<br><strong>voyage sur mesure</strong></h2>
-                <a href="#" class="button-1">Par ici</a>
-            </div>
-        </section>
-
-        <section id="steps">
-            <div class="wrapper">
+<body>
+    <header>
+        <div class="wrapper">
+            <h1>Alexandre Pinot<span class="orange">.</span></h1>
+            <h1>Portfolio<span class="orange">.</span></h1>
+            <nav>
                 <ul>
-                    <li id="step-1"><h4>Planifier</h4><p>Confiez-nous vos rêves d'évasion : en famille ou entre amis, nous trouverons la formule qui comblera vos attentes.</p></li>
-                    <li id="step-2"><h4>Organiser</h4><p>Bénéficiez de l'expertise de nos spécialistes de chaque destination, ils vous accompagnent dans la réalisation de votre voyage.</p></li>
-                    <li id="step-3"><h4>Voyager</h4><p>Nous nous chargeons d'assurer votre sécurité et de veiller à votre pleine sérénité tout au long de votre voyage.</p></li>
-                    <div class="clear"></div>
+                    <li><a href="#main-image">ACCUEIL</a></li>
+                    <li><a href="#steps">Présentation</a></li>
+                    <li><a href="#experiences">Expériences</a></li>
+                    <li><a href="#competences">Compétences</a></li>
+                    <li><a href="#CV">CV</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
+                    <li><select id="theme" onchange="switchTheme()">
+                            <option value="light">Light</option>
+                            <option value="dark">Dark</option>
+                        </select></li>
                 </ul>
-            </div>
-        </section>
+            </nav>
+        </div>
+    </header>
 
-        <section id="possibilities">
-            <div class="wrapper">
-                <article style="background-image: url(images/article-image-1.jpg);">
-                    <div class="overlay">
-                        <h4>Partez en famille</h4><p><small>Offrez le meilleur à ceux que vous aimez et partagez des moments fabuleux !</small></p>
-                        <a href="#" class="button-2">Plus d'infos</a>
-                    </div>
-                </article>
+    <section id="main-image">
+        <div class="wrapper">
+            <h2>Organisez votre<br><strong>voyage sur mesure</strong></h2>
+            <a href="#" class="button-1">Par ici</a>
+        </div>
+    </section>
 
-                <article style="background-image: url(images/article-image-2.jpg);">
-                    <div class="overlay">
-                        <h4>Envie de s'evader</h4><p><small>Parfois un peu d'évasion serait le bienvenue et ferait le plus grand bien !</small></p>
-                        <a href="#" class="button-2">Plus d'infos</a>
-                    </div>
-                </article>
-
+    <section id="steps">
+        <div class="wrapper">
+            <ul>
+                <li id="step-1">
+                    <h4>Planifier</h4>
+                    <p>Confiez-nous vos rêves d'évasion : en famille ou entre amis, nous trouverons la formule qui
+                        comblera vos attentes.</p>
+                </li>
+                <li id="step-2">
+                    <h4>Organiser</h4>
+                    <p>Bénéficiez de l'expertise de nos spécialistes de chaque destination, ils vous accompagnent dans
+                        la réalisation de votre voyage.</p>
+                </li>
+                <li id="step-3">
+                    <h4>Voyager</h4>
+                    <p>Nous nous chargeons d'assurer votre sécurité et de veiller à votre pleine sérénité tout au long
+                        de votre voyage.</p>
+                </li>
                 <div class="clear"></div>
-            </div>
-        </section>
+            </ul>
+        </div>
+    </section>
 
-        <section id="contact">
-            <div class="wrapper">
-                <h3>Contactez-nous</h3><p>Chez Travel Agency nous savons que voyager est une aventure humaine mais également un engagement financier important pour vous. C'est pourquoi nous mettons un point d'honneur à prendre en compte chacune de vos attentes pour vous aider dans la préparation de votre séjour, circuit ou voyage sur mesure.</p>
-                <form>
-                    <label for="name">Nom</label>
-                    <input type="text" id="name" placeholder="Votre nom">
-                    <label for="email">Email</label>
-                    <input type="text" id="email" placeholder="Votre email">
-                    <input type="submit" value="OK" class="button-3">
-                </form>
-            </div>
-        </section>
+    <section id="experiences">
+        <div class="wrapper"></div>
+    </section>
 
-        <footer>
-            <div class="wrapper">
-                <h1>Travel Agency<span class="orange">.</span></h1>
-                <div class="copyright">Copyright © 2023. Tous droits réservés.</div>
-            </div>
-        </footer>
-    </body>
+    <section id="competences">
+        <div class="wrapper">
+            <article style="background-image: url(images/article-image-1.jpg);">
+                <div class="overlay">
+                    <h4>Partez en famille</h4>
+                    <p><small>Offrez le meilleur à ceux que vous aimez et partagez des moments fabuleux !</small></p>
+                    <a href="#" class="button-2">Plus d'infos</a>
+                </div>
+            </article>
+
+            <article style="background-image: url(images/article-image-2.jpg);">
+                <div class="overlay">
+                    <h4>Envie de s'evader</h4>
+                    <p><small>Parfois un peu d'évasion serait le bienvenue et ferait le plus grand bien !</small></p>
+                    <a href="#" class="button-2">Plus d'infos</a>
+                </div>
+            </article>
+
+            <div class="clear"></div>
+        </div>
+    </section>
+
+    <section id="experiences">
+        <div class="wrapper"></div>
+    </section>
+
+    <section id="contact">
+        <div class="wrapper">
+            <h3>Contactez-nous</h3>
+            <p>Chez Travel Agency nous savons que voyager est une aventure humaine mais également un engagement
+                financier important pour vous. C'est pourquoi nous mettons un point d'honneur à prendre en compte
+                chacune de vos attentes pour vous aider dans la préparation de votre séjour, circuit ou voyage sur
+                mesure.</p>
+            <form>
+                <select name="contact" id="contact">
+                    <option value="Professionnel">Professionnel</option>
+                    <option value="Particulier">Particulier</option>
+                </select>
+                <label for="idsociete">Société: </label>
+                <input id="idsociete" type="text" name="societe" placeholder="Nom de la Societe">
+                <!-- <div class="input-group"> -->
+                <label for="email">Email</label>
+                <input type="text" id="email" placeholder="Votre email">
+                <!-- </div> -->
+                <br>
+                <!-- <div class="input-group"> -->
+                <label for="name">Nom</label>
+                <input type="text" id="name" placeholder="Votre nom">
+                <!-- </div> -->
+                <label for="idprenom">Prenom: </label>
+                <input id="idprenom" type="text" name="prenom" placeholder="Entrer votre prenom">
+                <br> <br>
+                <textarea cols="50" rows="5"></textarea>
+                <br>
+                <input type="submit" value="Valider" class="button-3">
+
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        <div class="wrapper">
+            <h1>Travel Agency<span class="orange">.</span></h1>
+            <div class="copyright">Copyright © 2023. Tous droits réservés.</div>
+        </div>
+    </footer>
+</body>
 
 </html>
